fix: token report, add admin APIs
